--- a/.stow-global-ignore
+++ b/.stow-global-ignore
@@ -15,7 +15,10 @@ _darcs
 \.gitignore
 \.gitmodules
 
+^.*\.sh$    # Shell scripts
+nix-linux
 nix-darwin
+etc
 
 .+~          # emacs backup files
 \#.*\#       # emacs autosave files
